data/derived/comb/progs/unify/prog6145.ml.out
Characters 12-15:
  let _ = del "z" testee;;
              ^^^
Error: This expression has type string but an expression was expected of type
         bool
